added an implementation of structured task scope from jdk 25 preview to test out parallel fetching of data from the database. also fixed an issue introduced earlier from the loglevel enum change.